# hymo

./: .gitignore  CPP_REWRITE.md  Cargo.toml  Makefile  README.md  README_ZH.md  build.sh  changelog.md  check_dtype  check_dtype.cpp  fix_patch.py  update.json
.github/workflows/: build.yml  dependabot-auto-merge.yml  release.yml
docs/: HYMOFS_INTERNAL.md  HYMOFS_INTERNAL_ZH.md  README_ZH.md
kernel_hook/: Makefile  README.md  hook_vfs_open.c  hymo_hook.c
module/: .gitignore  action.sh  createimg.sh  customize.sh  hot_mount.sh  hot_unmount.sh  metainstall.sh  metamount.sh  metauninstall.sh  module.prop  uninstall.sh
module/lkm/: README.md
module/lkm/binaries/: nuke-android-4.14.ko  nuke-android12-5.10.ko  nuke-android13-5.10.ko  nuke-android13-5.15.ko  nuke-android14-5.15.ko  nuke-android14-6.1.ko  nuke-android15-6.6.ko
patch/: hymofs.patch
patcher/: hymofs_patcher.py
scripts/: auto_build_and_deploy.sh
src/: .gitignore  Cargo.toml  config.rs  defs.hpp  defs.rs  executor.rs  logger.rs  magic_mount.rs  main.cpp  main.rs  overlay_mount.rs  utils.cpp  utils.hpp  utils.rs
src/conf/: cli.rs  config.cpp  config.hpp  config.rs
src/core/: executor.cpp  executor.hpp  inventory.cpp  inventory.hpp  inventory.rs  mod.rs  modules.cpp  modules.hpp  modules.rs  planner.cpp  planner.hpp  state.cpp  state.hpp  storage.cpp  storage.hpp  storage.rs  sync.cpp  sync.hpp  sync.rs
src/magic_mount/: mod.rs  node.rs  try_umount.rs
src/mount/: hymofs.cpp  hymofs.hpp  magic.cpp  magic.rs  mod.rs  overlay.cpp  overlay.hpp  overlay.rs
src/src/: magic_mount.rs  main.rs  utils.rs
template/: customize.sh  metamount.sh  module.prop
template/webroot/: index.html
template/webroot/assets/: index-CdinnOED.js  index-RPepPAvo.css
webui/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
webui/src/: App.svelte  app.css  locate.json
webui/src/components/: NavBar.css  NavBar.svelte  Toast.svelte
webui/src/lib/: api.js  api.mock.js  constants.js  constants_gen.js  (+1 more)
xbuild/src/: main.rs
xtask/src/: main.rs
(+18 files in other folders)
