[package]
name = "magic_mount_rs"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
extattr = "1"
log = "0.4"
simplelog = "0.12"
rustix = { version = "0.38", features = ["fs", "mount"] }
libc = "0.2"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
